logs/pycast.log
Listing '.'...
Listing './bin'...
Compiling './bin/setup.py'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pycast'...
Listing './lib/python3.5/site-packages/pycast/common'...
Compiling './lib/python3.5/site-packages/pycast/common/decorators.py'...
***   File "./lib/python3.5/site-packages/pycast/common/decorators.py", line 56
    print  "[WARNING] Could not enable optimization for %s, %s" % (fn.__name__, self)
                                                              ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pycast/errors'...
Compiling './lib/python3.5/site-packages/pycast/errors/baseerrormeasure.py'...
***   File "./lib/python3.5/site-packages/pycast/errors/baseerrormeasure.py", line 259
    print len(overestimations), confidenceLevel
            ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pycast/methods'...
Listing './lib/python3.5/site-packages/pycast/optimization'...
Listing './lib/python3.5/site-packages/pycast/tests'...
Compiling './lib/python3.5/site-packages/pycast/tests/matrixtest.py'...
***   File "./lib/python3.5/site-packages/pycast/tests/matrixtest.py", line 296
    print mtrx
             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/pycast/tests/methodtest.py'...
***   File "./lib/python3.5/site-packages/pycast/tests/methodtest.py", line 547
    except ValueError, e:
                     ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pycast-0.1.5a0.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
